Fix notifcation icon alignment
Align with top line so it looks good when only one line

--- a/styles/core.less
+++ b/styles/core.less
@@ -44,7 +44,7 @@ atom-notifications {
     }
 
     &.icon:before {
-      padding-top: .85em;
+      padding-top: 9px;
     }
   }
 }
